Version 2.4.1 -- 25 July 2007
------------------------------------------------------------------
30 July 2007
+ Fixed default authorization not getting saved.
+ Fixed default authorization was not working for new users.

23 July 2007
+ default item id on permission check functions is now zero instead of
  null. This will make checking permissions a little easier on new items.

19 July 2007
+ Bug #1690657 - Changed group select js property to onclick instead
  of onchange. Thanks singletrack.

29 May 2007
+ Changed the language abbreviation for Danish
+ Updated files: conf/languages.php

Version 2.4.0
------------------------------------------------------------------
26 April 2007
+ Changed authorize to use require_once instead of include (Thanks Daniel)

24 April 2007
+ Bug 1705106 - Fixed install.sql typo
+ Permissions just close the popup window instead of displaying
  message.
+ Moved include to prevent pre-defined error.

18 April 2007
+ Added Forgot password and Forgot username functionality
+ Updated files: templates/forms/reset_password.tpl,
  templates/forms/forgot.tpl


17 April 2007
+ Started password reset and user name reminder options.
+ Added comments to user menu template to prevent extra characters
+ Updated files: conf/config.php, templates/usermenus/top.tpl,
  templates/forms/forgot.tpl 


16 April 2007
+ Implemented RFE 1628318 - Remember me option on users module.
+ Rewrote logout functionality to work with remember me
+ Updated files: conf/config.php, templates/forms/settings.tpl,
  templates/my_page/user_setting.tpl
+ Hitting user's index.php forwards to the 404 page


11 April 2007
+ Removed redundant class calls in init.php


6 April 2007
+ Changed default username size to 3

5 April 2007
+ Updated translation functions.

4 April 2007
+ Changed form names on login templates since both have ids and may
  appear on same page.
+ Removed return by reference from Current_User::getUserObj

2 April 2007